--- a/code/03_kernel_spillover_analysis.Rmd .Rmd
+++ b/code/03_kernel_spillover_analysis.Rmd .Rmd
@@ -128,6 +128,7 @@ kernel_spillovers_2025 <- map_dfr(
 )
 
 
+library(tidyr)
 
 # pivot to wide
 spillover_all_2015 <-  kernel_spillovers_2015 %>%
@@ -158,6 +159,17 @@ saveRDS(after_final, "../data/processed/after_final.rds")
 panel_data <- bind_rows(before_final %>% mutate(year = 2015, post = 0),
                         after_final %>% mutate(year = 2024, post = 1))
 saveRDS(panel_data, "../data/processed/both_years.rds")
+```
+
+
+```{r}
+library(sf)       # for st_drop_geometry
+library(readr)    # for write_csv
+
+# save as csv
+panel_data_no_geom <- st_drop_geometry(panel_data)
+write_csv(panel_data_no_geom, "../data/processed/both_years.csv")
+
 ```
 
 
