--- a/code/03_plots.Rmd
+++ b/code/03_plots.Rmd
@@ -13,14 +13,20 @@ library(dplyr)
 library(readr)
 library(tidyr)
 library(ggplot2)
+library(scales)
+library(RColorBrewer) 
+library(ggplot2)
+library(patchwork)
+
 
 # Load preprocessed data
 census_sections <- readRDS("../data/processed/census_sections.rds")
-combined <- readRDS("../data/processed/both_years.rds")
 before <- readRDS("../data/processed/before_final.rds")
 after <- readRDS("../data/processed/after_final.rds")
+spillover_combined <- readRDS("../data/processed/both_years.rds")
 
-
+listings2015 <- readRDS("../data/processed/listings2015_sf.rds")
+listings2025 <- readRDS("../data/processed/listings_sf.rds")
 
 
 ```
@@ -38,253 +44,276 @@ combined_sf <- census_sections %>%
 
 ```
 
-### Airbnb data
+
+### Plots for income 
 ```{r}
+# Create year tag and merge into one dataset
+before_sf$year <- 2015
+after_sf$year <- 2024
+combined_sf <- bind_rows(before_sf, after_sf)
 
-# -------- 2015 ------------
-ggplot() +
-  # Census sections
-  geom_sf(data = census_sections, fill = "grey95", color = "grey70", size = 0.4) +
-  
-  # Airbnb listings
-  geom_sf(data = listings2015, aes(color = room_type), alpha = 0.5, size = 1.4) +
-
-  # Custom color palette
-  scale_color_manual(values = c("Entire" = "#1f78b4", "Room" = "#33a02c", "Other" = "#ff7f00")) +
-
-  labs(
-    title = "Airbnb Listings by accomodation type",
-    subtitle = "Barcelona (2015)",
-    color = "Accomodation Type"
-  ) +
-
-  theme_minimal() +
-  theme(
-    plot.title = element_text(size = 16, face = "bold", hjust = 0.5),
-    plot.subtitle = element_text(size = 11, hjust = 0.5),
-    legend.position = "bottom",
-    panel.grid = element_blank(),
-    axis.text = element_blank(),
-    axis.ticks = element_blank()
+# Compute change in wide format
+change_df <- combined_sf %>%
+  st_drop_geometry() %>%
+  select(census_id, year, Import_Euros) %>%
+  tidyr::pivot_wider(names_from = year, values_from = Import_Euros, names_prefix = "income_") %>%
+  mutate(
+    raw_change = income_2024 - income_2015,
+    z_change = scale(raw_change)[,1]  # normalised with z-score
   )
 
+# Merge back with geometry
+change_sf <- after_sf %>%
+  left_join(change_df, by = "census_id")
 
+```
 
-# ---------- 2025 -------------
-ggplot() +
-  # Census sections
-  geom_sf(data = census_sections, fill = "grey95", color = "grey70", size = 0.4) +
-  
-  # Airbnb listings
-  geom_sf(data = listings, aes(color = room_type), alpha = 0.5, size = 1.4) +
+```{r}
 
-  # Custom color palette
-  scale_color_manual(values = c("Entire" = "#1f78b4", "Room" = "#33a02c", "Other" = "#ff7f00")) +
-
-  labs(
-    title = "Airbnb Listings by accomodation type",
-    subtitle = "Barcelona (2025)",
-    color = "Accomodation Type"
+ggplot(change_sf) +
+  geom_sf(aes(fill = z_change), color = "white", size = 0.05) +
+  scale_fill_distiller(
+    palette = "YlGnBu", 
+    direction = 1,
+    name = "Income change (z-score)",
+    guide = guide_colorbar(barwidth = 1.2, barheight = 10)
   ) +
-
-  theme_minimal() +
+  labs(
+    title = "Change in disposable income",
+  ) +
+  theme_minimal(base_size = 13) +
   theme(
-    plot.title = element_text(size = 16, face = "bold", hjust = 0.5),
-    plot.subtitle = element_text(size = 11, hjust = 0.5),
-    legend.position = "bottom",
+    plot.title = element_text(size = 18, face = "bold", hjust = 0.5),
+    legend.position = c(0.98, 0.05),
+    legend.justification = c(0.5, 0),
     panel.grid = element_blank(),
     axis.text = element_blank(),
     axis.ticks = element_blank()
   )
 ```
 
-## Delta variabels 
-```{r}
-library(tmap)
-tmap_mode("plot")
-```
 
-### income 
-```{r}
-tm_shape(combined_sf) +
-  tm_polygons("delta_income",
-              palette = "YlOrRd",
-              title = "Δ Income (€)",
-              style = "quantile",
-              border.col = NA) +
-  tm_layout(
-    title = "Change in Disposable Income (2015–2021)",
-    legend.outside = TRUE,
-    legend.frame = FALSE,          # Removes legend border
-    legend.position = c("right", "bottom"), 
-    frame = FALSE                  # Removes map frame
-  )
-
-
-
-
-```
-
-
-### education level
-```{r}
-tm_shape(combined_sf) +
-  tm_polygons("delta_pct_edu_5",
-              palette = "YlOrRd",
-              title = "Δ % Highly Educated",
-              style = "quantile",
-              border.alpha = 0.1) +
-  tm_layout(title = "Change in share of highly educated residents",
-               legend.outside = TRUE,
-               legend.frame = FALSE,          # Removes legend border
-               legend.position = c("right", "bottom"), 
-               frame = FALSE                  # Removes map frame
-  )
-
-# Different colour 
-tm_shape(combined_sf) +
-  tm_polygons("delta_income", palette = "RdYlBu", title = "Δ Income (2021 - 2015)", style = "quantile") +
-  tm_layout(title = "Change in Disposable Income")
-
-
-```
-
-
-
+# Education 
 ```{r}
 
-library(leaflet)
-library(sf)
-library(dplyr)
-
-# 1. Transform to WGS84 (required for leaflet)
-combined_wgs <- st_transform(combined_sf, crs = 4326)
-
-# 2. Define global range for color scaling (shared across levels)
-global_range <- range(c(combined_wgs$delta_pct_edu_1,
-                        combined_wgs$delta_pct_edu_2,
-                        combined_wgs$delta_pct_edu_3,
-                        combined_wgs$delta_pct_edu_4,
-                        combined_wgs$delta_pct_edu_5,
-                        combined_wgs$delta_pct_edu_6), na.rm = TRUE)
-
-# 3. Create color palette
-pal <- colorNumeric("YlOrRd", domain = global_range, na.color = "transparent")
-
-
-leaflet(data = combined_wgs) %>%
-  addProviderTiles(providers$CartoDB.Positron) %>%
-  
-  addPolygons(fillColor = ~pal(delta_pct_edu_1),
-              color = "#444", weight = 0.5, fillOpacity = 0.7,
-              label = ~paste0("Δ Level 1: ", round(delta_pct_edu_1 * 100, 2), "%"),
-              group = "Level 1") %>%
-  
-  addPolygons(fillColor = ~pal(delta_pct_edu_2),
-              color = "#444", weight = 0.5, fillOpacity = 0.7,
-              label = ~paste0("Δ Level 2: ", round(delta_pct_edu_2 * 100, 2), "%"),
-              group = "Level 2") %>%
-  
-  addPolygons(fillColor = ~pal(delta_pct_edu_3),
-              color = "#444", weight = 0.5, fillOpacity = 0.7,
-              label = ~paste0("Δ Level 3: ", round(delta_pct_edu_3 * 100, 2), "%"),
-              group = "Level 3") %>%
-  
-  addPolygons(fillColor = ~pal(delta_pct_edu_4),
-              color = "#444", weight = 0.5, fillOpacity = 0.7,
-              label = ~paste0("Δ Level 4: ", round(delta_pct_edu_4 * 100, 2), "%"),
-              group = "Level 4") %>%
-  
-  addPolygons(fillColor = ~pal(delta_pct_edu_5),
-              color = "#444", weight = 0.5, fillOpacity = 0.7,
-              label = ~paste0("Δ Level 5: ", round(delta_pct_edu_5 * 100, 2), "%"),
-              group = "Level 5") %>%
-  
-  addPolygons(fillColor = ~pal(delta_pct_edu_6),
-              color = "#444", weight = 0.5, fillOpacity = 0.7,
-              label = ~paste0("Δ Level 6: ", round(delta_pct_edu_6 * 100, 2), "%"),
-              group = "Level 6") %>%
-  
-  addLayersControl(
-    baseGroups = c("Level 1", "Level 2", "Level 3", "Level 4", "Level 5", "Level 6"),
-    options = layersControlOptions(collapsed = FALSE)
+# create grouping
+edu_change_df <- combined_sf %>%
+  st_drop_geometry() %>%
+  mutate(
+    high_edu = pct_edu_4 + pct_edu_5 + pct_edu_6
   ) %>%
-  
-  addLegend(pal = pal,
-            values = global_range,
-            title = "Δ Share (%)",
-            position = "bottomright")
-
-
-```
-
-
-#### Description of eductaion levels 
-| Level | Likely Meaning                           |
-| ----- | ---------------------------------------- |
-| 1     | No formal education / Illiterate         |
-| 2     | Primary education                        |
-| 3     | Lower secondary (ESO)                    |
-| 4     | Upper secondary (Bachillerato or FP)     |
-| 5     | Tertiary education (University or FP II) |
-| 6     | Postgraduate (Masters, PhD, etc.)        |
-
-
-### ownership
-```{r}
-tm_shape(combined_sf) +
-  tm_polygons("delta_pct_legal_entity",
-              palette = "YlOrRd",
-              title = "Δ % Corporate Ownership",
-              style = "quantile",
-              border.alpha = 0.1) +
-  tm_layout(title = "Change in Legal Entity Ownership (2018–2025)",
-    legend.outside = TRUE,
-    legend.frame = FALSE,          # Removes legend border
-    legend.position = c("right", "bottom"), 
-    frame = FALSE                  # Removes map frame
+  select(census_id, year, high_edu) %>%
+  tidyr::pivot_wider(names_from = year, values_from = high_edu, names_prefix = "edu_") %>%
+  mutate(
+    raw_change = edu_2024 - edu_2015,
+    z_change = scale(raw_change)[,1]
   )
 
-# different colour 
-tm_shape(combined_sf) +
-  tm_polygons("delta_pct_legal_entity",
-              palette = "inferno", style = "quantile",
-              title = "Δ Corporate Ownership") +
-  tm_layout(title = "Change in Corporate Property Ownership (2025 – 2018)",
-            legend.outside = TRUE)
+# Merge back to 2024 geometry
+edu_change_sf <- after_sf %>%
+  left_join(edu_change_df, by = "census_id")
 
-```
-
-## for paper 
-```{r}
-library(tmap)
-
-tmap_mode("plot")  # or "view" for interactive map
-
-tm_shape(before_sf) +
-  tm_polygons(
-    col = "Import_Euros",
-    fill.scale = tm_scale_intervals(
-      style = "quantile",   # can change to "jenks", "equal", or use breaks=
-      n = 5,
-      values = "YlOrRd"
-    ),
-    fill.legend = tm_legend(title = "Income (€)"),
-    border.col = "white",
-    col_alpha = 0.8
+# main plot 
+ggplot(edu_change_sf) +
+  geom_sf(aes(fill = z_change), color = "white", size = 0.05) +
+  scale_fill_gradientn(
+    colours = pal,
+    values = scales::rescale(c(-3, -2, -1, 0, 1, 3)),  # adapt to your range
+    name = "Percentage of highly \n educated residents (z-score)",
+    guide = guide_colorbar(barwidth = 1.2, barheight = 10)
   ) +
-  tm_title("Income Distribution by Census Section (2015)") +
-  tm_layout(
-    legend.outside = TRUE,
-    legend.position = c("right", "bottom"),
-    legend.frame = FALSE,
-    frame = FALSE
+  labs(
+    title = "Change in the share of highly educated residents"
+  ) +
+  theme_minimal(base_size = 13) +
+  theme(
+    plot.title = element_text(size = 18, face = "bold", hjust = 0.5),
+    legend.position = c(0.98, 0.05),
+    legend.justification = c(0.5, 0),
+    panel.grid = element_blank(),
+    axis.text = element_blank(),
+    axis.ticks = element_blank()
   )
 
+```
+
+# listings 
+```{r}
+library(ggplot2)
+library(sf)
+library(patchwork)  # For combining plots
+
+# Plot 2015 listings
+p1 <- ggplot() +
+  geom_sf(data = census_sections, fill = "grey95", color = "white") +
+  geom_sf(data = listings2015, color = "#1b9e77", size = 0.2, alpha = 0.6) +
+  labs(title = "Airbnb Listings (2015)") +
+  theme_minimal(base_size = 13) +
+  theme(
+    plot.title = element_text(size = 18, face = "bold", hjust = 0.5),
+    legend.position = c(0.98, 0.05),
+    legend.justification = c(0.5, 0),
+    panel.grid = element_blank(),
+    axis.text = element_blank(),
+    axis.ticks = element_blank()
+  )
+
+# Plot 2025 listings
+p2 <- ggplot() +
+  geom_sf(data = census_sections, fill = "grey95", color = "white") +
+  geom_sf(data = listings2025, color = "#d95f02", size = 0.2, alpha = 0.6) +
+  labs(title = "Airbnb Listings (2025)") +
+  theme_minimal(base_size = 13) +
+  theme(
+    plot.title = element_text(size = 18, face = "bold", hjust = 0.5),
+    legend.position = c(0.98, 0.05),
+    legend.justification = c(0.5, 0),
+    panel.grid = element_blank(),
+    axis.text = element_blank(),
+    axis.ticks = element_blank()
+  )
+
+# Combine them side by side
+p1 + p2
+
+```
+
+# Spillover 
+```{r}
+# combied data containing spillover
+spillover_combined <- st_as_sf(readRDS("../data/processed/both_years.rds"))
+
+
+# Just to be safe, we drop geometry from spillover and use census
+spillover_no_geom <- spillover_combined %>%
+  st_drop_geometry()
+
+# Join based on shared column
+spillover_joined <- census_sections %>%
+  left_join(spillover_no_geom, by = "census_id")
+
+spillover_joined <- census_sections %>%
+  left_join(spillover_no_geom, by = "census_id") %>%
+  mutate(kernel_spill_300 = replace_na(kernel_spill_300, 0))
 
 
 ```
 
 
+```{r}
 
+# Filter spillover per year
+spillover_2015 <- spillover_joined %>% filter(year == 2015)
+spillover_2025 <- spillover_joined %>% filter(year == 2024)
+
+#Clean listings
+listings2015_clean <- listings2015 %>%
+  filter(!st_is_empty(geometry)) %>%
+  st_cast("POINT", warn = FALSE)
+
+listings2025_clean <- listings2025 %>%
+  filter(!st_is_empty(geometry)) %>%
+  st_cast("POINT", warn = FALSE)
+
+
+# normalise 
+spillover_2015 <- spillover_2015 %>%
+  mutate(kernel_spill_300_z = scale(kernel_spill_300))
+
+spillover_2025 <- spillover_2025 %>%
+  mutate(kernel_spill_300_z = scale(kernel_spill_300))
+
+
+```
+
+```{r}
+
+
+ggplot() +
+  geom_sf(data = spillover_2025, aes(fill = kernel_spill_300_z), color = NA) +
+  geom_sf(data = listings2025_clean, color = "#00003f", size = 0.2, alpha = 0.3) +
+   scale_fill_gradientn(
+    colours = c("#d73027", "#fcdc83", "#ffffbf",  "#54c4b4", "#565fa4"),  
+    values = scales::rescale(c(-3, -1.5, 0, 1.5, 3)),
+    name = "Spillover (Z-score)",
+    guide = guide_colorbar(barwidth = 1.2, barheight = 10),
+    limits = c(-2.5, 4.5)
+  ) +
+  labs(title = "2025: Spillover and Listings (Z-score)") +
+  theme_minimal() +
+  theme(
+    plot.title = element_text(size = 14, face = "bold", hjust = 0.5),
+    legend.position = "right",
+    panel.grid = element_blank(),
+    axis.text = element_blank(),
+    axis.ticks = element_blank()
+  )
+
+
+# 2015
+ggplot() +
+  geom_sf(data = spillover_2015, aes(fill = kernel_spill_300_z), color = NA) +
+  geom_sf(data = listings2015_clean, color = "#00003f", size = 0.2, alpha = 0.3) +
+   scale_fill_gradientn(
+    colours = c("#d73027", "#fcdc83", "#ffffbf",  "#54c4b4", "#565fa4"),  
+    values = scales::rescale(c(-3, -1.5, 0, 1.5, 3)),
+    name = "Spillover (Z-score)",
+    guide = guide_colorbar(barwidth = 1.2, barheight = 10),
+    limits = c(-2.5, 4.5)
+  ) +
+  labs(title = "2015: Spillover and Listings (Z-score)") +
+  theme_minimal() +
+  theme(
+    plot.title = element_text(size = 14, face = "bold", hjust = 0.5),
+    legend.position = "right",
+    panel.grid = element_blank(),
+    axis.text = element_blank(),
+    axis.ticks = element_blank()
+  )
+
+```
+```{r}
+
+ggplot() +
+  geom_sf(data = spillover_2025, aes(fill = kernel_spill_300), color = NA) +
+  geom_sf(data = listings2025_clean, color = "#00003f", size = 0.2, alpha = 0.3) +
+   scale_fill_gradientn(
+    colours = c("#d73027", "#fcdc83", "#ffffbf",  "#54c4b4", "#565fa4"),  
+    values = scales::rescale(c(-3, -1.5, 0, 1.5, 3)),
+    name = " Total Spillover ",
+    guide = guide_colorbar(barwidth = 1.2, barheight = 10),
+    limits = c(0, 1000)
+  ) +
+  labs(title = "2025: Spillover and Listings") +
+  theme_minimal() +
+  theme(
+    plot.title = element_text(size = 14, face = "bold", hjust = 0.5),
+    legend.position = "right",
+    panel.grid = element_blank(),
+    axis.text = element_blank(),
+    axis.ticks = element_blank()
+  )
+
+
+# 2015
+ggplot() +
+  geom_sf(data = spillover_2015, aes(fill = kernel_spill_300), color = NA) +
+  geom_sf(data = listings2015_clean, color = "#00003f", size = 0.2, alpha = 0.3) +
+   scale_fill_gradientn(
+    colours = c("#d73027", "#fcdc83", "#ffffbf",  "#54c4b4", "#565fa4"),  
+    values = scales::rescale(c(-3, -1.5, 0, 1.5, 3)),
+    name = "Total Spillover",
+    guide = guide_colorbar(barwidth = 1.2, barheight = 10),
+    limits = c(0, 110)
+  ) +
+  labs(title = "2015: Spillover and Listings") +
+  theme_minimal() +
+  theme(
+    plot.title = element_text(size = 14, face = "bold", hjust = 0.5),
+    legend.position = "right",
+    panel.grid = element_blank(),
+    axis.text = element_blank(),
+    axis.ticks = element_blank()
+  )
+```
 
